# QT

ERP/: CMakeLists.txt  hwlogo.qrc  logo.qrc  uml_diagram.md
ERP/Core/: DataManager.cpp  DataManager.h  SessionManager.cpp  SessionManager.h
ERP/UI/: InputDialog.cpp  InputDialog.h  TableManager.cpp  TableManager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  signupdialog.cpp  signupdialog.h  signupdialog.ui
ERP/Utils/: CsvManager.cpp  CsvManager.h
QT_Attendance_Manager/: README.md  teachersignup.cpp  widget.cpp
